vlib/v/checker/tests/mod_op_wrong_left_type_err_c.vv
struct A{}
fn main() {
	a := A{}
	a % 1
}
